--- a/OAuthTestApp/public/index.html
+++ b/OAuthTestApp/public/index.html
@@ -6,7 +6,12 @@
     <title>Google OAuth App</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body> 
+    <label class="switch">
+        <input type="checkbox" id="checkbox">
+        <span class="slider"></span>
+    </label>
+
     <div class="container">
         <div class="login-card">
             <h1>Welcome</h1>
@@ -24,7 +29,6 @@
             
             <div id="error" class="error-message" style="display: none;"></div>
         </div>
-    </div>
 
     <script src="script.js"></script>
 </body>
