--- a/OAuthTestApp/public/index.html
+++ b/OAuthTestApp/public/index.html
@@ -9,7 +9,9 @@
 <body> 
     <label class="switch">
         <input type="checkbox" id="checkbox">
-        <span class="slider"></span>
+        <span class="slider">
+        </span>
+        <h3>Theme</h3>
     </label>
 
     <div class="container">
