--- a/OAuthTestApp/public/success.html
+++ b/OAuthTestApp/public/success.html
@@ -13,14 +13,15 @@
             <div id="userInfo" class="user-info">
                 <div class="loading">Loading user information...</div>
             </div>
-            <!-- From Uiverse.io by cssbuttons-io --> 
-
-<button class="noselect"><span class="text">Copy</span><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z">
-
-</path>
-</svg>
-</span>
-</button>
+<label class="container">
+    <input type="checkbox" checked="checked">
+    <div class="checkmark">
+        <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512">
+            <title>Checkmark</title>
+            <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M416 128L192 384l-96-96"></path>
+        </svg>
+    </div>
+</label>
             <button id="signOut" class="sign-out-btn">Sign Out</button>
         </div>
     </div>
