--- a/OAuthTestApp/public/success.html
+++ b/OAuthTestApp/public/success.html
@@ -7,21 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <!-- From Uiverse.io by krlozCJ -->     <div class="container">
         <div class="success-card">
             <h1>Welcome!</h1>
             <div id="userInfo" class="user-info">
                 <div class="loading">Loading user information...</div>
             </div>
-<label class="container">
-    <input type="checkbox" checked="checked">
-    <div class="checkmark">
-        <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512">
-            <title>Checkmark</title>
-            <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M416 128L192 384l-96-96"></path>
-        </svg>
-    </div>
-</label>
             <button id="signOut" class="sign-out-btn">Sign Out</button>
         </div>
     </div>
