--- a/OAuthTestApp/public/success.html
+++ b/OAuthTestApp/public/success.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- From Uiverse.io by krlozCJ -->     <div class="container">
+    <div class="container">
         <div class="success-card">
             <h1>Welcome!</h1>
             <div id="userInfo" class="user-info">
