--- a/OAuthTestApp/public/index.html
+++ b/OAuthTestApp/public/index.html
@@ -19,8 +19,8 @@
             <h1>Welcome</h1>
             <p>Sign in with your Google account to continue</p>
             
-            <button id="googleSignIn" class="google-btn">
-                <svg class="google-icon" viewBox="0 0 24 24">
+            <button class="sign-btn">
+                <svg class="sign-icon" viewBox="0 0 24 24">
                     <path fill="#4285F4" d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"/>
                     <path fill="#34A853" d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"/>
                     <path fill="#FBBC05" d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"/>
@@ -28,6 +28,14 @@
                 </svg>
                 Sign in with Google
             </button>
+            <button class="sign-btn">
+                <svg class="sign-icon" viewBox="0 0 168 168" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                    <circle fill="#1DB954" cx="84" cy="84" r="84"/>
+                    <path fill="#fff" d="M119.1 118.9c-1.4 2.3-4.5 3-6.8 1.6-18.6-11.4-42-14-69.5-7.8-2.6.5-5.1-1.3-5.6-3.9-.5-2.6 1.3-5.1 3.9-5.6 29-6.5 54.1-3.6 74.2 8.6 2.4 1.5 3.1 4.6 1.8 6.9zm9.8-20.4c-1.7 2.8-5.3 3.7-8.1 2-21.3-13-53.7-16.8-78.9-9.3-3.1 1-6.4-1-7.4-4.1-1-3.1 1-6.4 4.1-7.4 28-9.2 64.2-5 88 10.5 2.8 1.7 3.7 5.2 2.3 7.3zm.1-21.1c-24.4-14.4-65.1-15.8-88.9-8.7-3.5 1-7.2-1-8.2-4.5-1-3.5 1-7.2 4.5-8.2 27.7-7.8 73-6.2 100.1 10.1 3.3 1.9 4.3 6.3 2.4 9.6-1.9 3.2-6.2 4.2-9.9 2.7z"/>
+                </svg>
+                Sign in with Spotify
+            </button>
+
             
             <div id="error" class="error-message" style="display: none;"></div>
         </div>
